Fix issue with mat-chips truncating long segments
Changes to be committed:
modified:   front-end/src/app/editor/iu-display/iu-display.component.html
modified:   front-end/src/app/editor/source-editor/source-editor.component.html
modified:   front-end/src/app/editor/source-iu/source-iu.component.html
modified:   front-end/src/app/editor/source-link/source-link.component.html
modified:   front-end/src/app/editor/summary-editor/summary-editor.component.html
modified:   front-end/src/app/editor/summary-iu/summary-iu.component.html
modified:   front-end/src/app/editor/summary-link/summary-link.component.html
modified:   front-end/src/dashboard.sass

--- a/front-end/src/dashboard.sass
+++ b/front-end/src/dashboard.sass
@@ -170,3 +170,16 @@ $card-header-margin: 10px
 
 .mat-tab-body-wrapper
   height: 100%
+
+
+//mat-chips
+.iu-mat-chip
+  height: auto !important
+  min-height: 32px
+  white-space: normal !important
+
+.iu-mat-chip .mdc-evolution-chip__text-label
+  white-space: normal !important
+  overflow: visible !important
+  text-overflow: unset !important
+  line-height: 1.3
